--- a/examples/cross-contract-calls/high-level/Cargo.toml
+++ b/examples/cross-contract-calls/high-level/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cross-contract-high-level"
 version = "1.1.0"
-authors = ["Near Inc <hello@nearprotocol.com>"]
+authors = ["Near Inc <hello@nearprotocol.com>", "@jriemann"]
 edition = "2021"
 
 [lib]
